# jyntrix-ai

./: .env.example  .gitignore  .prettierignore  .prettierrc  CHANGELOG.md  CLAUDE.md  LICENSE  docker-compose.yml  package-lock.json  package.json  tsconfig.json  turbo.json
apps/web/: .env.example  Dockerfile  next.config.ts  package.json  tailwind.config.ts  tsconfig.json
apps/web/src/: middleware.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx  (+1 more)
claude-memory/: FIXES_HISTORY.md  QUICK_REFERENCE.md  SYSTEM_OVERVIEW.md
database/: combined_migration.sql
database/migrations/: 001_create_profiles.sql  002_create_conversations.sql  003_create_messages.sql  004_create_memories.sql  005_create_entities.sql  006_create_indexes_and_functions.sql  007_create_analytics.sql
docs/: README.md
docs/api/: README.md  analytics.md
docs/architecture/: README.md  pipeline-flow.md
docs/backend/: README.md
docs/frontend/: README.md
services/api/: Dockerfile  pyproject.toml  requirements.txt
services/api/src/: __init__.py  config.py  dependencies.py  main.py
services/api/src/analytics/: __init__.py  context.py  emitter.py  instrumentation.py  models.py
services/api/src/core/: __init__.py  context_builder.py  embeddings.py  graph_search.py  hybrid_ranker.py  keyword_search.py  llm_client.py  query_analyzer.py  vector_search.py
services/api/src/db/: __init__.py  qdrant.py  redis.py  supabase.py
services/api/src/models/: __init__.py  chat.py  entity.py  memory.py  user.py
services/api/src/routers/: __init__.py  analytics.py  auth.py  chat.py  health.py  memory.py  profile.py
services/api/src/schemas/: __init__.py  analytics.py  auth.py  chat.py  memory.py
services/api/src/services/: __init__.py  analytics_service.py  auth_service.py  chat_service.py  memory_service.py  retrieval_service.py
services/api/src/utils/: __init__.py  token_counter.py
services/worker/: .env.example  Dockerfile  pyproject.toml  requirements.txt
services/worker/src/: __init__.py  config.py  main.py
services/worker/src/db/: __init__.py  qdrant.py  redis.py  supabase.py
services/worker/src/tasks/: __init__.py  analytics_task.py  embedding_task.py  extraction_task.py  summary_task.py
services/worker/src/utils/: __init__.py  logger.py
(+31 files in other folders)
